@@ -17,7 +17,6 @@
         <platform.version>4.0.1.2</platform.version>
     </properties>
 
-
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
